<resources>
    <string name="app_name">VIRA</string>
    <string name="app_accessibility">Accessibility</string>
    <string name="label_about">About</string>
    <string name="label_view_image">View Image</string>
    <string name="label_permission_rational">Required Permissions are needed for core functionality</string>
    <string name="label_grant_permission">Grant Permission</string>
    <string name="label_ok">OK</string>
    <string name="label_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_enter_filename_required">Enter filename (required)</string>
    <string name="label_read">Read</string>
    <string name="label_stop">Stop</string>
    <string name="dialog_title_save_image">Captured Image</string>
    <string name="dialog_message_save_image">Do you want to save this image and with its current filename?</string>
    <string name="dialog_possitive_save">Save</string>
    <string name="dialog_negative_save">Don\'t save</string>
    <string name="dialog_title_retake">Re-take</string>
    <string name="dialog_message_retake">Are you sure you want to re-take the image?</string>
    <string name="dialog_positive_yes">Yes</string>
    <string name="dialog_negative_no">No</string>
    <string name="label_voice_selection">Voice Selection</string>
    <string name="label_app_language">Filipino (Default)</string>
    <string name="label_system_language">English</string>
    <string name="label_select_language">Select preferred application language voice</string>
    <string name="label_speech_rate">Speech rate</string>
    <string name="label_pitch">Pitch</string>
    <string name="label_play">Play</string>
    <string name="label_reset">Reset</string>
    <string name="label_mini_gallery">Mini Gallery</string>
    <string name="label_instructions">Instructions</string>
    <string name="desctiption_instruction">Detailed information on how to use the application</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="description_contact_us">Help us make Visual Impaired Reading Assistant better</string>
    <string name="label_app_version">App Version</string>
    <string name="description_licensed">Copyright Visual Impaired Reading Assistant<br />Licensed under the MIT License</string>
    <string name="tag_fragment_instruction">tag_fragment_instruction</string>
    <string name="tag_fragment_contact_us">tag_fragment_contact_us</string>
    <string name="label_remove_marked">Remove Marked</string>
    <string name="label_dialog_deleting">Deleting images...</string>
    <string name="label_image_logo">Image Logo</string>
    <string name="description_tip_icon">Tip icon</string>
    <string name="label_tip">Tap the image to read the text, double to stop, and long press to clear the view.</string>
    <string name="label_edit">Edit</string>
    <string name="label_accessibility">Accessibility</string>
    <string name="dialog_delete_image_title">Delete Image</string>
    <string name="dialog_delete_image_message">Are you sure you want to delete this image?</string>
    <string name="instruction_about_camera">Instruction about camera</string>
    <string name="label_next">Next</string>
    <string name="tag_fragment_instruction_one">tag_fragment_instruction_one</string>
    <string name="tag_fragment_instruction_two">tag_fragment_instruction_two</string>
    <string name="label_back">Back</string>
    <string name="tag_fragment_instruction_three">tag_fragment_instruction_three</string>
    <string name="tag_fragment_instruction_four">tag_fragment_instruction_four</string>
    <string name="tip_zoom">You can interact the image to zoom in and zoom out.</string>
    <string name="instruction_about_customizing_image">Instruction about customizing image</string>
    <string name="instruction_about_reading_image">Instruction about reading image</string>
    <string name="instruction_about_removing_list_of_images">Instruction about removing list of images</string>
    <string name="instruction_about_selecting_preferred_voice">Instruction about selecting preferred voice</string>
</resources>