<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.accessibility.sub.accessibility.AccessibilityFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_language"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_select_language" />

        <RadioGroup
            android:id="@+id/fragment_accessibility_voice_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fragment_accessibility_voice_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layoutDirection="rtl"
                android:tag="@string/label_app_language"
                android:text="@string/label_app_language"
                android:textAppearance="?attr/textAppearanceBody2" />

            <RadioButton
                android:id="@+id/fragment_accessibility_voice_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:tag="@string/label_system_language"
                android:text="@string/label_system_language"
                android:textAppearance="?attr/textAppearanceBody2" />


        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/dividerVertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_speech_rate" />

            <SeekBar
                android:id="@+id/application_seek_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="100"
                android:progress="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_pitch" />

            <SeekBar
                android:id="@+id/application_seek_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="100"
                android:progress="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/accessibility_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/label_play"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/accessibility_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/label_reset"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>
</layout>